# docks

./: .gitignore  MANIFEST.in  README.md  build-flatpak.sh  docks.py  pyproject.toml
data/: com.pabmartine.Docks.desktop  com.pabmartine.Docks.metainfo.xml
docs/: architecture.md  development.md  index.md  requisitos-iniciales.md  roadmap.md  status.md  testing.md  user-guide.md
locale/: docks.pot
locale/en/LC_MESSAGES/: docks.mo  docks.po
locale/es/LC_MESSAGES/: docks.mo  docks.po
packaging/flatpak/: build-flatpak.sh  com.pabmartine.Docks.yaml
scripts/: compile_translations.sh  extract_strings.sh
src/docks/: __init__.py  app.py  main.py
src/docks/core/: __init__.py  config.py  constants.py  i18n.py
src/docks/models/: __init__.py  connection.py  container.py  image.py  network.py  volume.py
src/docks/repositories/: connection_repository.py
src/docks/services/: __init__.py  connection_service.py  docker_service.py
src/docks/ui/: __init__.py  styles.py  window.py
tests/: test_docker_service.py  test_window_logic.py
